--- a/Retail/Retail.vcxproj.filters
+++ b/Retail/Retail.vcxproj.filters
@@ -18,5 +18,18 @@
     <ClCompile Include="testRetail.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RetailItem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="RetailItem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\..\..\Desktop\retailData.csv">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
